<?xml version="1.0"?>
<package format="2">

  <name>robomaster_ep</name>
  <version>0.0.0</version>
  <description>C++ version RoboMaster SDK and ROS Interfaces for RoboMaster EP</description>

  <maintainer email="kongy6@mail2.sysu.edu.cn">Joen</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
